# Green-Spark

./: DockerFile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
Frontend/: index.html  package-lock.json  package.json  tailwind.config.js
Frontend/src/: App.jsx  index.css
Frontend/src/components/: ApplianceEstimates.jsx  ApplianceSurvey.jsx  AuthPage.jsx  BillSelector.jsx  ChartCard.jsx  Layout.jsx  MetricCard.jsx  Pagination.jsx  Sidebar.jsx
Frontend/src/features/: authSlice.js
Frontend/src/pages/: Appliances.jsx  Bills.jsx  Index.jsx  Insights.jsx  Overview.jsx  Settings.jsx  test.jsx
Frontend/src/redux/: baseQueryWithReauth.js  rootReducer.js  store.js
alembic/: env.py
alembic/versions/: 922897c3c898_new_addition.py  a7ca1fcb943c_add_role_to_user_model.py  adcf34458771_add_cascade_deletes_to_relationships.py  dedfb3e3a8a1_fix_star_rating_column_to_integer.py  f90d0ab0f78c_initial_database_schema.py
scripts/: bill_text_ocr_output.txt  explore_pdf.py
src/: celery_worker.py
src/app/: main.py
src/app/core/: celery_app.py  config.py  email.py  exception_handler.py  exception_utils.py  exceptions.py  middleware.py  security.py
src/app/crud/: appliance_crud.py  bill_crud.py  insights_crud.py  user_crud.py
src/app/db/: base.py  session.py
src/app/models/: __init__.py  appliance_model.py  bill_model.py  insights_model.py  user_model.py
src/app/schemas/: appliance_schema.py  auth_schema.py  bill_schema.py  extra_schemas.py  insights_schema.py  token_schema.py  user_schema.py
src/app/services/: ai_service.py  auth_service.py  (+8 more)
(+29 files in other folders)
